# ServiceForSmallCommerce-taeyoon

./: .gitignore  CLAUDE.md
.claude/: code-rules.md  commit-rules.md  dod.md  github-workflow.md  settings.json
.claude/hooks/: block-git-push.sh  cargo-check-on-edit.sh  check-docs-on-stop.sh  check-plan-on-edit.sh  clear-marker-on-start.sh  coverage-check-fe.sh  docker-cleanup-after-test.sh  load-context-on-start.sh  mark-pending.sh  session-doc-on-stop.sh  (+4 more)
backend/: .env.example  Cargo.toml  Makefile  docker-compose.yml
backend/migrations/: 00001_init.sql  00002_users.sql  00003_analyses.sql  00004_analysis_my_url.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/adapters/: mod.rs
backend/src/adapters/claude/: analyzer.rs  mod.rs
backend/src/adapters/coupang/: crawler.rs  mod.rs
backend/src/adapters/gemini/: analyzer.rs  mod.rs
backend/src/adapters/postgres/: analysis_repo.rs  mod.rs  user_repo.rs
backend/src/application/: analysis_service.rs  auth_service.rs  mod.rs  user_service.rs
backend/src/domain/: mod.rs
backend/src/domain/models/: analysis.rs  mod.rs  user.rs
backend/src/domain/ports/: ai_analyzer.rs  analysis_repository.rs  crawler.rs  mod.rs  user_repository.rs
backend/src/http/: extractors.rs  macros.rs  mod.rs  router.rs  state.rs
backend/src/http/handlers/: analysis.rs  auth.rs  health.rs  mod.rs  user.rs
backend/tests/: analysis_test.rs  auth_test.rs  health_test.rs
backend/tests/helpers/: app.rs  mod.rs
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
(+93 files in other folders)
